--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,3 +12,15 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: gotok8s
         kubernetes_version: v1.14.6
+  github-package-k8s-image-sync:
+    name: github package k8s image sync
+    runs-on: ubuntu-latest
+    steps:
+    - name: sync
+      uses: maguowei/actions/k8s-image-sync@master
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.GITHUB_DOCKER_PASSWORD }}
+        registry: docker.pkg.github.com
+        repository: maguowei/k8s-docker-desktop-for-mac/gotok8s
+        kubernetes_version: v1.14.6
